[package]
name = "feeder"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["serde", "v4"] }
alloy = { version = "0.3", features = ["full"] }
alloy-providers = { version = "0.3", features = ["reqwest"] }
alloy-signers = { version = "0.3", features = ["local"] }
alloy-primitives = "0.3"

